Implemented action listener

--- a/BioBeat/src/MainPackage/GUI.form
+++ b/BioBeat/src/MainPackage/GUI.form
@@ -116,6 +116,9 @@
               <Image iconType="3" name="/res/icon-prev.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jPrevButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jNextButton">
           <Properties>
@@ -123,6 +126,9 @@
               <Image iconType="3" name="/res/icon-next.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jNextButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JToggleButton" name="jPlayButton">
           <Properties>
